syntax = "proto3";

message Height {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  uint64 revision_number = 1 [(gogoproto.moretags) = "yaml:\"revision_number\""];
  uint64 revision_height = 2 [(gogoproto.moretags) = "yaml:\"revision_height\""];
}

message Params {
  repeated string allowed_clients = 1 [(gogoproto.moretags) = "yaml:\"allowed_clients\""];
}